--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "less-loader": "^6.1.0",
+    "lodash": "^4.17.15",
+    "mint-ui": "^2.2.13",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.10.1",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss-px2rem": "^0.3.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
