--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mint-ui": "^2.2.13",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "vant": "^2.8.4",
     "vue": "^2.6.11",
     "vue-router": "^3.3.1"
   },
